kubectl/conv-converter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
  namespace: conv-app-namespace
spec:
  replicas: 5
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      volumes:
        - name: conv-api-pvc
          persistentVolumeClaim:
            claimName: conv-api-pvc
      containers:
        - name: converter
          image: antonlarichev/conv-service:1.0
          volumeMounts:
            - name: conv-api-pvc
              mountPath: /opt/app/uploads
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
