kubectl/short-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-api-deployment
  namespace: short-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: short-api
        image: antonlarichev/short-api:v1.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
          requests:
            memory: "256Mi"
            cpu: "500m"
        ports:
          - containerPort: 3000
