kubectl/conv-converter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-converter-cluster-ip
  namespace: conv-app-namespace
spec:
  type: ClusterIP
  selector:
    app: converter
  ports:
    - protocol: TCP
      port: 8080
