kubectl/rabbit-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-cluster-ip
  namespace: conv-app-namespace
spec:
  type: ClusterIP
  ports:
    - name: amqp
      port: 5672
      protocol: TCP
    - name: management
      port: 15672
      protocol: TCP
  selector:
    app: rabbit
