kubectl/short-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: short-api-cluster-ip
  namespace: short-app-namespace
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: backend
